Icons and logo now appear, icons are properly fixed, still need to make one more for new music. Logo needs to be aligned to nav for small screen, and for bigger screens nav needs to be right aligned, fixed the border on the input boxes, also made the icons responsive, added responsive image in the Vision section

--- a/css/main.css
+++ b/css/main.css
@@ -182,7 +182,7 @@ button {
 .input-boxes {
     width: 100%;
     height: 3em;
-    border: #000;
+    border: 1px solid #000;
 }
 
 textarea {
@@ -210,6 +210,23 @@ textarea {
     width: 5em;
 }
 
+.radio {
+    width: 5em;
+}
+
+.text-align {
+    text-align: center;
+}
+
+.logo {
+    width: 7rem;
+    margin: .25rem 1%;
+    display: block;
+}
+
+.guitar {
+    width: 100%
+}
 
 @media only screen and (min-width: 25em) {
     
@@ -224,6 +241,7 @@ textarea {
     .masthead {
         text-align: center;
     }
+    
 }
 
 @media only screen and (min-width: 38em) {
@@ -240,6 +258,8 @@ textarea {
     .nav-footer {
         text-align: right;
     }
+    
+    
 }
 
 .form-spacing {
