--- a/css/typography.css
+++ b/css/typography.css
@@ -145,6 +145,6 @@ sub {
 
 h1, h2, h3, h4, h5, h6,
 .brand-family {
-    font-family: "Open Sans", sans-serif;
+    font-family: "Raleway", sans-serif;
     color: #e94647;
 }
